[gd_scene load_steps=3 format=3 uid="uid://dchjls84gte1i"]

[ext_resource type="Texture2D" uid="uid://crthw1liws2mq" path="res://raft_editor/textures/cell_placeholder.jpg" id="1_wfqhq"]
[ext_resource type="Script" path="res://raft_editor/raft/cell.gd" id="2_7t8nv"]

[node name="Cell" type="TextureButton"]
anchors_preset = -1
anchor_left = 0.493
anchor_top = 0.507
anchor_right = 0.493
anchor_bottom = 0.507
offset_left = -29.04
offset_top = -33.04
offset_right = 34.96
offset_bottom = 30.96
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_wfqhq")
script = ExtResource("2_7t8nv")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
pivot_offset = Vector2(32, 32)
text = "Cell"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
